--- a/doc/source/_static/default.css
+++ b/doc/source/_static/default.css
@@ -1,6 +1,17 @@
 @import url("classic.css");
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+div .toctree-wrapper { column-count: 2; }
+
+div .toctree-wrapper > ul { margin: 0; }
+
+ul .toctree-l1 { 
+    margin: 0;
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    break-inside: avoid-column;
+}
+
 div.body {
     min-width: 450px;
     max-width: 100%;
